# vlm-audit

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_audit.py
core/: __init__.py  config.py  model.py
data/: __init__.py  flickr30k.py  test_flickr.py
evaluation/: __init__.py  faithfulness.py  grounding.py  results.py
extraction/: __init__.py  attention.py  gradcam.py  hybrid.py  test_attention.py  visualise_maps.py
results/: results_20260331_063826.json  results_all_layers.json  results_hybrid.json
scripts/: conda_setup.sh  config.sh  nots_run.sh  nots_setup.sh  run_audit.py  run_audit.sh
tests/: test_core.py  test_evaluation.py  test_extraction.py
visualization/: plot_results.py  visualise_all_layers.py  visualise_failure.py  visualise_layers.py  visualise_maps.py  visualise_per_word.py  visualise_pipeline.py
